--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+section {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.secondary-section {
+  background: #b5b5b5;
+}
+
+section h2 {
+  font-size: 5rem;
+  margin-bottom: 2rem;
+}
