contact form + footer

--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -4,7 +4,7 @@
     padding: 1rem;
     position: fixed;
     width: 100%;
-
+    display: flex;
 }
 
 .container{
@@ -41,7 +41,7 @@
     left: 0;
     bottom: -5px;
     transform: scale(0, 1);
-    transition: transform 0.25s ease;
+    transition: transform 0.25s ease-in-out;
     transform-origin: 0 100%;
 }
 
@@ -57,5 +57,6 @@
     background: #eaeaea;
     bottom: -5px;
     left: 0;
-
+    transition: transform 0.25s ease-in-out;
+    transform-origin: 0 100%;
 }
